# megacloud-mcp

./: Dockerfile  README.md  pyproject.toml
megacloud_mcp/: __init__.py  __main__.py  apis.py  client.py  log.py  middleware.py  monitor.py  schema.py  server.py  utils.py
src/: __main__.py  apis.py  middleware.py  redis.py  server.py  settings.py  tools.py  utils.py
