[project]
name = "megacloud-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.scripts]
megacloud-mcp = "megacloud_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"